Russian text fix

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	<a href="/links.php">Общее задание</a>
 	<p><b>Вариант 3:</b> в произвольном тексте, введенном через форму, каждое третье слово перевести в верхний регистр, каждую третью букву всех слов сделать фиолетовой, подсчитать общее количество встречающихся в тексте букв "о" и "О".</p>
-	<form action="/main.php" method="post">
+	<form action="/main.php" method="post" accept-charset="utf-8">
 		<label for="">Введите текст:</label>
 		<textarea name="comment"></textarea>
 		<input type="submit" value="Преобразовать">
