--- a/index.html
+++ b/index.html
@@ -7,15 +7,12 @@
 	<meta name="author" content="maksim">
 	<meta name="description" content="Page with PHP algorithms">
 	<meta name="keywords" content="php, algorithm, test, input">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
-	<a href="/links.php">Общее задание</a>
-	<p><b>Вариант 3:</b> в произвольном тексте, введенном через форму, каждое третье слово перевести в верхний регистр, каждую третью букву всех слов сделать фиолетовой, подсчитать общее количество встречающихся в тексте букв "о" и "О".</p>
-	<form action="/main.php" method="post" accept-charset="utf-8">
-		<label for="">Введите текст:</label>
-		<textarea name="comment"></textarea>
-		<input type="submit" value="Преобразовать">
-	</form>
+	<ul>
+		<li><a href="./lab2/lab2.html">Лабораторная работа №2</a></li>
+		<li><a href="./lab3/lab3.html">Лабораторная работа №3</a></li>
+	</ul>
 </body>
 </html>
