--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	<ul>
 		<li><a href="./lab2/lab2.html">Лабораторная работа №2</a></li>
-		<li><a href="./lab3/lab3.html">Лабораторная работа №3</a></li>
+		<li><a href="./lab3/lab3.php">Лабораторная работа №3</a></li>
 	</ul>
 </body>
 </html>
