--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<ul>
 		<li><a href="./lab2/lab2.html">Лабораторная работа №2</a></li>
 		<li><a href="./lab3/lab3.php">Лабораторная работа №3</a></li>
+		<li><a href="./lab4/lab4.php">Лабораторная работа №4</a></li>
 	</ul>
 </body>
 </html>
