--- a/index.html
+++ b/index.html
@@ -16,4 +16,7 @@
 		<li><a href="./lab4/lab4.php">Лабораторная работа №4</a></li>
 	</ul>
 </body>
+<footer>
+	<script> </script>
+</footer>
 </html>
