--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 </head>
 <body>
 	<ul>
+		<li><a href="./scp-foundation-site/index.html">Лабораторная работа №1</a></li>
 		<li><a href="./lab2/lab2.html">Лабораторная работа №2</a></li>
 		<li><a href="./lab3/lab3.php">Лабораторная работа №3</a></li>
 		<li><a href="./lab4/lab4.php">Лабораторная работа №4</a></li>
+		<li><a href="./lab5/main.php">Лабораторная работа №5</a></li>
+		<li><a href="./lab6/main.php">Лабораторная работа №6</a></li>
 	</ul>
 </body>
-<footer>
-	<script> </script>
-</footer>
 </html>
