--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<li><a href="./lab4/lab4.php">Лабораторная работа №4</a></li>
 		<li><a href="./lab5/main.php">Лабораторная работа №5</a></li>
 		<li><a href="./lab6/main.php">Лабораторная работа №6</a></li>
+		<li><a href="./lab7/main.php">Лабораторная работа №7</a></li>
 	</ul>
 </body>
 </html>
