Lab8 added, small fixes

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		<li><a href="./lab5/main.php">Лабораторная работа №5</a></li>
 		<li><a href="./lab6/main.php">Лабораторная работа №6</a></li>
 		<li><a href="./lab7/main.php">Лабораторная работа №7</a></li>
+		<li><a href="./lab8/main.php">Лабораторная работа №8</a></li>
 	</ul>
 </body>
 </html>
