--- a/lab2/lab2.html
+++ b/lab2/lab2.html
@@ -15,8 +15,9 @@
 	<form action="./main.php" method="post" accept-charset="utf-8">
 		<label for="">Введите текст:</label>
 		<textarea name="comment"></textarea>
-		<input type="submit" value="Преобразовать">
+		<input class="form-button" type="submit" value="Преобразовать">
 	</form>
+	<a href="../index.html">На главную</a>
 </body>
 <footer>
 	<script> </script>
